--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 baseurl: /jekyll_demo
 highlighter: pygments
-markdown: redcarpet
+#markdown: redcarpet
+markdown: kramdown
 kramdown:
   input: GFM
