--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl: /jekyll_demo
 highlighter: pygments
 #markdown: redcarpet2
-#markdown: redcarpet
-markdown: kramdown
+markdown: redcarpet
+#markdown: kramdown
 #kramdown:
 #  input: GFM
