--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
 baseurl: /jekyll_demo
 highlighter: pygments
-#markdown: redcarpet2
-#markdown: redcarpet
+markdown: redcarpet
+# Make redcarpet behave like GitHub Flavored Markdown
+# refer to http://sholsinger.com/2014/03/jekyll-github-flavored-markdown
+# refer to http://stackoverflow.com/questions/16099153/table-not-render-when-use-redcarpet-in-jekyll-github-pages
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data"]
+  
 #markdown: kramdown
 #kramdown:
 #  input: GFM
